[gd_scene load_steps=4 format=3 uid="uid://c8tpkfiyweqe"]

[ext_resource type="Script" path="res://Scripts/Player/player_card.gd" id="1_8f0g1"]
[ext_resource type="Texture2D" uid="uid://c3epjg682vr6n" path="res://Assets/Art/WaterDeck/Frozenwyrmling.png" id="1_ofxtn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h4vab"]
size = Vector2(61, 91)

[node name="PlayerCard" type="Node2D"]
position = Vector2(96, 400)
script = ExtResource("1_8f0g1")

[node name="CardImage" type="Sprite2D" parent="."]
scale = Vector2(0.184, 0.184)
texture = ExtResource("1_ofxtn")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_h4vab")

[node name="HealthLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 15.0
offset_top = 34.0
offset_right = 23.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 7
text = "10"
horizontal_alignment = 1

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
